<resources>
    <string name="app_name">LinearLayout</string>
    <string name="name">Ahmed Hassan</string>
    <string name="jobName">Engineer</string>
    <string name="place">UK</string>
    <string name="Review">(150 Reviews)</string>
    <string name="number">4.5</string>
    <string name="_3_hr">" 3  hr"</string>
    <string name="nationality">Russian</string>
    <string name="_5_days_ago">5 Days ago</string>
</resources>